--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -16,6 +16,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Exploratory Data Analysis - Apple\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Download stock data"
    ]
   },
